--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         step="0.1"
       />
       <div class="controls__btns">
-        <button id="modeJS">Fill</button>
-        <button id="saveJS">SAVE</button>
+        <button id="modeJS">그리기</button>
+        <button id="saveJS">저장</button>
       </div>
       <div class="controls__palette">
         <div
