--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         step="0.1"
       />
       <div class="controls__btns">
-        <button id="modeJS">Draw</button>
+        <button id="modeJS">Fill</button>
         <button id="saveJS">Save</button>
       </div>
       <div class="controls__palette">
