--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <canvas class="canvas" id="canvasJS"></canvas>
     <form class="url-input">
       <h3 class="title">URL:</h3>
-      <input type="text" class="image-input" placeholder="Type URL" />
+      <input type="text" class="image-input" placeholder="URL을 입력해주세요" />
     </form>
     <img class="sample-image" />
     <div class="controls">
